# fractals-planets-shadows-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
shaders/: 1_light_ps.fx  1_light_vs.fx  default_ps.fx  default_vs.fx  n_light_ps.fx  n_light_vs.fx  shiny_no_texture_ps.fx  shiny_no_texture_vs.fx
src/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Example.cpp  Example.h  Fractals.cpp  Fractals.h  GameBase.cpp  GameBase.h  L.cpp  L.h  Light.cpp  Light.h  Planets.cpp  Planets.h  PolyObject.cpp  PolyObject.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderParamBase.h  ShaderParams.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TmpCollisionObj.cpp  TmpCollisionObj.h  TrMenu.cpp  TrMenu.h  TrMenuItem.cpp  TrMenuItem.h  Trecia.cpp  Trecia.h  (+24 more)
src/glst/: GLST_Factory.cpp  GLST_Factory.h  GLST_Glyph.h  GLST_Surface.cpp  GLST_Surface.h  GLST_Text.cpp  GLST_Text.h
src/gui/: Container.cpp  Container.h  DecoratedWindow.cpp  DecoratedWindow.h  Gui.cpp  Gui.h  GuiBase.h  GuiLayer.cpp  GuiLayer.h  GuiLayerBase.cpp  GuiLayerBase.h  InputHandlerBase.cpp  InputHandlerBase.h  PopupMenu.cpp  PopupMenu.h  ScreenInfo.h  Theme.cpp  Theme.h  Window.cpp  Window.h  WindowBase.h  WindowEvents.cpp  WindowEvents.h  Windowless.cpp  Windowless.h  glgui.cpp  glgui.h
src/math/: Matrix.h  Matrix.inline.h  Missing.h  Plane.h  Quaternion.h  Quaternion.inline.h  Vector.h  Vector.inline.h  Vector1.h  Vector1.inline.h  Vector2.h  Vector2.inline.h  Vector3.h  Vector3.inline.h  Vector4.h  Vector4.inline.h
